Library/TeamTalk_DLL/TeamTalk.h

    
    typedef WCHAR TTCHAR;
    typedef int TTBOOL;
    typedef char TTCHAR;
    typedef int TTBOOL;
    typedef int INT32;
    typedef unsigned int UINT32;
    typedef void VOID;
    typedef struct AudioBlock
    {
        INT32 nStreamID;
        INT32 nSampleRate;
        INT32 nChannels;
        VOID* lpRawAudio;
        INT32 nSamples;
        UINT32 uSampleIndex;
    } AudioBlock;
    typedef enum MediaFileStatus
    {
        MFS_CLOSED          = 0,
        MFS_ERROR           = 1,
        MFS_STARTED         = 2,
        MFS_FINISHED        = 3,
        MFS_ABORTED         = 4,
        MFS_PAUSED          = 5,
        MFS_PLAYING         = 6
    } MediaFileStatus;
    typedef enum AudioFileFormat
    {
        AFF_NONE                 = 0,
        AFF_CHANNELCODEC_FORMAT  = 1,
        AFF_WAVE_FORMAT          = 2,
        AFF_MP3_16KBIT_FORMAT    = 3,
        AFF_MP3_32KBIT_FORMAT    = 4,
        AFF_MP3_64KBIT_FORMAT    = 5,
        AFF_MP3_128KBIT_FORMAT   = 6,
        AFF_MP3_256KBIT_FORMAT   = 7,
    } AudioFileFormat;
    typedef struct AudioFormat
    {
        AudioFileFormat nAudioFmt;
        INT32 nSampleRate;
        INT32 nChannels;
    } AudioFormat;
    typedef enum FourCC
    {
        FOURCC_NONE   =   0,
        FOURCC_I420   = 100,
        FOURCC_YUY2   = 101,
        FOURCC_RGB32  = 102
    } FourCC;
    typedef struct VideoFormat
    {
        INT32 nWidth;
        INT32 nHeight;
        INT32 nFPS_Numerator; 
        INT32 nFPS_Denominator; 
        FourCC picFourCC; 
    } VideoFormat;
    typedef struct VideoFrame
    {
        INT32 nWidth;
        INT32 nHeight;
        INT32 nStreamID;
        TTBOOL bKeyFrame;
        VOID* frameBuffer;
        INT32 nFrameBufferSize;
    } VideoFrame;
    typedef struct VideoCaptureDevice
    {
        TTCHAR szDeviceID[TT_STRLEN];
        TTCHAR szDeviceName[TT_STRLEN];
        TTCHAR szCaptureAPI[TT_STRLEN];
        VideoFormat videoFormats[TT_VIDEOFORMATS_MAX];
        INT32 nVideoFormatsCount; 
    } VideoCaptureDevice;
    typedef struct SpeexCodec
    {
        INT32 nBandmode;
        INT32 nQuality;
        INT32 nTxIntervalMSec;
        TTBOOL bStereoPlayback;
    } SpeexCodec;
    typedef struct SpeexVBRCodec
    {
        INT32 nBandmode;
        INT32 nQuality;
        INT32 nBitRate;
        INT32 nMaxBitRate;
        TTBOOL bDTX;
        INT32 nTxIntervalMSec;
        TTBOOL bStereoPlayback; 
    } SpeexVBRCodec;
    typedef struct OpusCodec
    {
        INT32 nSampleRate;
        INT32 nChannels;
        INT32 nApplication;
        INT32 nComplexity;
        TTBOOL bFEC;
        TTBOOL bDTX;
        INT32 nBitRate;
        TTBOOL bVBR;
        TTBOOL bVBRConstraint;
        INT32 nTxIntervalMSec;
        INT32 nFrameSizeMSec;
    } OpusCodec;
    typedef struct AudioPreprocessor
    {
        AudioPreprocessorType nPreprocessor;
        union
        {
            SpeexDSP speexdsp;
            TTAudioPreprocessor ttpreprocessor;
        };
    } AudioPreprocessor;
    typedef struct WebMVP8Codec
    {
        union
        {
            INT32 nRcTargetBitrate;
            UINT32 rc_target_bitrate;
        };
        UINT32 nEncodeDeadline;
    } WebMVP8Codec;
    typedef enum Codec
    {
        NO_CODEC                    = 0,
        SPEEX_CODEC                 = 1,
        SPEEX_VBR_CODEC             = 2,
        OPUS_CODEC                  = 3,
        WEBM_VP8_CODEC              = 128,
    } Codec;
    typedef struct AudioCodec
    {
        Codec nCodec;  
        union
        {
            SpeexCodec speex;
            SpeexVBRCodec speex_vbr;
            OpusCodec opus;
        };
    } AudioCodec;
    typedef struct VideoCodec
    {
        Codec nCodec;  
        union
        {
            WebMVP8Codec webm_vp8;
        };
    } VideoCodec;
    typedef struct MediaFileInfo
    {
        MediaFileStatus nStatus;
        TTCHAR szFileName[TT_STRLEN];
        AudioFormat audioFmt;
        VideoFormat videoFmt;
        UINT32 uDurationMSec;
        UINT32 uElapsedMSec;
    } MediaFileInfo;
    typedef struct MediaFilePlayback
    {
        UINT32 uOffsetMSec;
        TTBOOL bPaused;
        AudioPreprocessor audioPreprocessor;
    } MediaFilePlayback;
    typedef enum StreamType
    {
        STREAMTYPE_NONE                     = 0x00000000,
        STREAMTYPE_VOICE                    = 0x00000001,
        STREAMTYPE_VIDEOCAPTURE             = 0x00000002,
        STREAMTYPE_MEDIAFILE_AUDIO          = 0x00000004,
        STREAMTYPE_MEDIAFILE_VIDEO          = 0x00000008,
        STREAMTYPE_DESKTOP                  = 0x00000010,
        STREAMTYPE_DESKTOPINPUT             = 0x00000020,
        STREAMTYPE_MEDIAFILE                = STREAMTYPE_MEDIAFILE_AUDIO |
                                              STREAMTYPE_MEDIAFILE_VIDEO,
        STREAMTYPE_CLASSROOM_ALL            = STREAMTYPE_VOICE |
                                              STREAMTYPE_VIDEOCAPTURE |
                                              STREAMTYPE_DESKTOP |
                                              STREAMTYPE_MEDIAFILE,
    } StreamType;
    typedef VOID TTInstance;
    TEAMTALKDLL_API TTBOOL TT_SetSoundOutputVolume(IN TTInstance* lpTTInstance, 
                                                   IN INT32 nVolume);
    TEAMTALKDLL_API INT32 TT_GetSoundOutputVolume(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_SetSoundOutputMute(IN TTInstance* lpTTInstance, 
                                                 IN TTBOOL bMuteAll);
    TEAMTALKDLL_API TTBOOL TT_Enable3DSoundPositioning(IN TTInstance* lpTTInstance, 
                                                       IN TTBOOL bEnable);
    TEAMTALKDLL_API TTBOOL TT_AutoPositionUsers(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_EnableAudioBlockEvent(IN TTInstance* lpTTInstance,
                                                    IN INT32 nUserID,
                                                    IN StreamType nStreamType,
                                                    IN TTBOOL bEnable);
    TEAMTALKDLL_API TTBOOL TT_EnableAudioBlockEventEx(IN TTInstance* lpTTInstance,
                                                      IN INT32 nUserID,
                                                      IN StreamType nStreamType,
                                                      IN const AudioFormat* lpAudioFormat,
                                                      IN TTBOOL bEnable);
    TEAMTALKDLL_API TTBOOL TT_InsertAudioBlock(IN TTInstance* lpTTInstance,
                                               IN const AudioBlock* lpAudioBlock);
    TEAMTALKDLL_API TTBOOL TT_EnableVoiceTransmission(IN TTInstance* lpTTInstance,
                                                      IN TTBOOL bEnable);
    TEAMTALKDLL_API TTBOOL TT_EnableVoiceActivation(IN TTInstance* lpTTInstance, 
                                                    IN TTBOOL bEnable);
    TEAMTALKDLL_API TTBOOL TT_SetVoiceActivationLevel(IN TTInstance* lpTTInstance, 
                                                      IN INT32 nLevel);
    TEAMTALKDLL_API INT32 TT_GetVoiceActivationLevel(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_SetVoiceActivationStopDelay(IN TTInstance* lpTTInstance,
                                                          IN INT32 nDelayMSec);
    TEAMTALKDLL_API INT32 TT_GetVoiceActivationStopDelay(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_StartRecordingMuxedAudioFile(IN TTInstance* lpTTInstance,
                                                           IN const AudioCodec* lpAudioCodec,
                                                           IN const TTCHAR* szAudioFileName,
                                                           IN AudioFileFormat uAFF);
    TEAMTALKDLL_API TTBOOL TT_StartRecordingMuxedAudioFileEx(IN TTInstance* lpTTInstance,
                                                             IN INT32 nChannelID,
                                                             IN const TTCHAR* szAudioFileName,
                                                             IN AudioFileFormat uAFF);
    TEAMTALKDLL_API TTBOOL TT_StopRecordingMuxedAudioFile(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_StopRecordingMuxedAudioFileEx(IN TTInstance* lpTTInstance,
                                                            IN INT32 nChannelID);
    TEAMTALKDLL_API TTBOOL TT_StartVideoCaptureTransmission(IN TTInstance* lpTTInstance,
                                                            IN const VideoCodec* lpVideoCodec);
    TEAMTALKDLL_API TTBOOL TT_StopVideoCaptureTransmission(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_GetVideoCaptureDevices(IN OUT VideoCaptureDevice* lpVideoDevices,
                                                     IN OUT INT32* lpnHowMany);
    TEAMTALKDLL_API TTBOOL TT_InitVideoCaptureDevice(IN TTInstance* lpTTInstance,
                                                     IN const TTCHAR* szDeviceID,
                                                     IN const VideoFormat* lpVideoFormat);
    TEAMTALKDLL_API TTBOOL TT_CloseVideoCaptureDevice(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_PaintVideoFrame(IN HDC hDC,
                                              IN INT32 XDest,
                                              IN INT32 YDest,
                                              IN INT32 nDestWidth,
                                              IN INT32 nDestHeight,
                                              IN VideoFrame* lpVideoFrame);
    TEAMTALKDLL_API TTBOOL TT_PaintVideoFrameEx(IN HDC hDC,
                                                IN INT32 XDest,
                                                IN INT32 YDest,
                                                IN INT32 nDestWidth,
                                                IN INT32 nDestHeight,
                                                IN INT32 XSrc,
                                                IN INT32 YSrc,
                                                IN INT32 nSrcWidth,
                                                IN INT32 nSrcHeight,
                                                IN VideoFrame* lpVideoFrame);
    TEAMTALKDLL_API VideoFrame* TT_AcquireUserVideoCaptureFrame(IN TTInstance* lpTTInstance,
                                                                IN INT32 nUserID);
    TEAMTALKDLL_API TTBOOL TT_ReleaseUserVideoCaptureFrame(IN TTInstance* lpTTInstance,
                                                           IN VideoFrame* lpVideoFrame);
    TEAMTALKDLL_API TTBOOL TT_StartStreamingMediaFileToChannel(IN TTInstance* lpTTInstance,
                                                               IN const TTCHAR* szMediaFilePath,
                                                               IN const VideoCodec* lpVideoCodec);
    TEAMTALKDLL_API TTBOOL TT_StartStreamingMediaFileToChannelEx(IN TTInstance* lpTTInstance,
                                                                 IN const TTCHAR* szMediaFilePath,
                                                                 IN const MediaFilePlayback* lpMediaFilePlayback,
                                                                 IN const VideoCodec* lpVideoCodec);
    TEAMTALKDLL_API TTBOOL TT_UpdateStreamingMediaFileToChannel(IN TTInstance* lpTTInstance,
                                                                IN const MediaFilePlayback* lpMediaFilePlayback,
                                                                IN const VideoCodec* lpVideoCodec);
    TEAMTALKDLL_API TTBOOL TT_StopStreamingMediaFileToChannel(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API INT32 TT_InitLocalPlayback(IN TTInstance* lpTTInstance,
                                               IN const TTCHAR* szMediaFilePath,
                                               IN const MediaFilePlayback* lpMediaFilePlayback);
    TEAMTALKDLL_API TTBOOL TT_UpdateLocalPlayback(IN TTInstance* lpTTInstance,
                                                  IN INT32 nPlaybackSessionID,
                                                  IN const MediaFilePlayback* lpMediaFilePlayback);
    TEAMTALKDLL_API TTBOOL TT_StopLocalPlayback(IN TTInstance* lpTTInstance,
                                                IN INT32 nPlaybackSessionID);
    TEAMTALKDLL_API TTBOOL TT_GetMediaFileInfo(IN const TTCHAR* szMediaFilePath,
                                               OUT MediaFileInfo* lpMediaFileInfo);
    TEAMTALKDLL_API VideoFrame* TT_AcquireUserMediaVideoFrame(IN TTInstance* lpTTInstance,
                                                              IN INT32 nUserID);
    TEAMTALKDLL_API TTBOOL TT_ReleaseUserMediaVideoFrame(IN TTInstance* lpTTInstance,
                                                         IN VideoFrame* lpVideoFrame);